; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_cli_default_init.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_cli_default_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hb_builtin_presets_json = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"PresetCLIDefault\00", align 1
@hb_presets_cli_default = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hb_presets_cli_default_init() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @hb_builtin_presets_json, align 4
  %4 = call i32* @hb_value_json(i32 %3)
  store i32* %4, i32** %1, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @hb_dict_get(i32* %5, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @hb_value_dup(i32 %6)
  store i32 %7, i32* @hb_presets_cli_default, align 4
  %8 = load i32, i32* @hb_presets_cli_default, align 4
  %9 = call i32 @hb_presets_clean(i32 %8)
  %10 = load i32, i32* @hb_presets_cli_default, align 4
  %11 = call i32 @hb_presets_add_internal(i32 %10)
  store i32 %11, i32* %2, align 4
  %12 = call i32 @hb_value_free(i32** %1)
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32* @hb_value_json(i32) #1

declare dso_local i32 @hb_value_dup(i32) #1

declare dso_local i32 @hb_dict_get(i32*, i8*) #1

declare dso_local i32 @hb_presets_clean(i32) #1

declare dso_local i32 @hb_presets_add_internal(i32) #1

declare dso_local i32 @hb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
